Fixed spacing issue.

--- a/public/scss/modules/_skills.scss
+++ b/public/scss/modules/_skills.scss
@@ -1,67 +1,67 @@
 #skills {
-    padding: 50px 15px;
-    text-align: center;
-    h2 {
-        color: $heading;
-        margin-bottom: 50px;
-    }
-    ul {
-        display: block;
-        margin: 0 auto;
-        max-width: 800px;
-        padding: 0;
-    }
-    li {
-        background: darken($background-alt, 5%);
-        border-radius: 5px;
-        color: $heading;
-        cursor: default;
-        display: inline-block;
-        font-size: 1.2em;
-        list-style: none;
-        margin: 7px;
-        padding: 5px 10px;
-    }
+  padding: 50px 15px;
+  text-align: center;
+  h2 {
+    color: $heading;
+    margin-bottom: 50px;
+  }
+  ul {
+    display: block;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 0;
+  }
+  li {
+    background: darken($background-alt, 5%);
+    border-radius: 5px;
+    color: $heading;
+    cursor: default;
+    display: inline-block;
+    font-size: 1.2em;
+    list-style: none;
+    margin: 7px;
+    padding: 5px 10px;
+  }
 }
 
 /* Delighter.js styles *************************************************************/
 .delighter.right {
-    transform: translate(-1600%);
-    opacity: 0;
-    transition: all 2.75s ease-out;
+  transform: translate(-1600%);
+  opacity: 0;
+  transition: all 2.75s ease-out;
 }
 
 .delighter.started li,
 .delighter.right.started {
-    opacity: 1;
-    transform: none;
+  opacity: 1;
+  transform: none;
 }
 
 .delighter li {
-    opacity: 0;
-    transition: all .7s ease-out;
-    transform: translateY(400%);
+  opacity: 0;
+  transition: all 0.7s ease-out;
+  transform: translateY(400%);
 }
 
 .delighter.started li:nth-child(1) {
-    transition: all .7x ease-out;
+  transition: all 0.7x ease-out;
 }
 
 .delighter.left {
-    transform: translate(100%);
-    opacity: 0;
-    transition: all .75s ease-out;
+  transform: translate(100%);
+  opacity: 0;
+  transition: all 0.75s ease-out;
 }
 
 .delighter.left {
-    transform: none;
-    opacity: 1;
+  transform: none;
+  opacity: 1;
 }
 
 .delighter li {
   opacity: 0;
   transform: translatey(400%);
-  transition: all .7s ease-out;
+  transition: all 0.7s ease-out;
 }
 
 .delighter.started li {
@@ -70,77 +70,77 @@
 }
 
 .delighter.started li:nth-child(1) {
-  transition: all .7s ease-out .1s;
+  transition: all 0.7s ease-out 0.1s;
 }
 
 .delighter.started li:nth-child(2) {
-  transition: all .7s ease-out .2s;
+  transition: all 0.7s ease-out 0.2s;
 }
 
 .delighter.started li:nth-child(3) {
-  transition: all .7s ease-out .3s;
+  transition: all 0.7s ease-out 0.3s;
 }
 
 .delighter.started li:nth-child(4) {
-  transition: all .7s ease-out .4s;
+  transition: all 0.7s ease-out 0.4s;
 }
 
 .delighter.started li:nth-child(5) {
-  transition: all .7s ease-out .5s;
+  transition: all 0.7s ease-out 0.5s;
 }
 
 .delighter.started li:nth-child(6) {
-  transition: all .7s ease-out .6s;
+  transition: all 0.7s ease-out 0.6s;
 }
 
 .delighter.started li:nth-child(7) {
-  transition: all .7s ease-out .7s;
+  transition: all 0.7s ease-out 0.7s;
 }
 .delighter.started li:nth-child(8) {
-  transition: all .7s ease-out .8s;
+  transition: all 0.7s ease-out 0.8s;
 }
 .delighter.started li:nth-child(9) {
-  transition: all .7s ease-out .9s;
+  transition: all 0.7s ease-out 0.9s;
 }
 .delighter.started li:nth-child(10) {
-  transition: all .7s ease-out 1s;
+  transition: all 0.7s ease-out 1s;
 }
 .delighter.started li:nth-child(11) {
-  transition: all .7s ease-out 1.1s;
+  transition: all 0.7s ease-out 1.1s;
 }
 .delighter.started li:nth-child(12) {
-  transition: all .7s ease-out 1.2s;
+  transition: all 0.7s ease-out 1.2s;
 }
 .delighter.started li:nth-child(13) {
-  transition: all .7s ease-out 1.3s;
+  transition: all 0.7s ease-out 1.3s;
 }
 .delighter.started li:nth-child(14) {
-  transition: all .7s ease-out 1.4s;
+  transition: all 0.7s ease-out 1.4s;
 }
 .delighter.started li:nth-child(15) {
-  transition: all .7s ease-out 1.5s;
+  transition: all 0.7s ease-out 1.5s;
 }
 .delighter.started li:nth-child(16) {
-  transition: all .7s ease-out 1.6s;
+  transition: all 0.7s ease-out 1.6s;
 }
 .delighter.started li:nth-child(17) {
-  transition: all .7s ease-out 1.7s;
+  transition: all 0.7s ease-out 1.7s;
 }
 .delighter.started li:nth-child(18) {
-  transition: all .7s ease-out 1.8s;
+  transition: all 0.7s ease-out 1.8s;
 }
 .delighter.started li:nth-child(19) {
-  transition: all .7s ease-out 1.9s;
+  transition: all 0.7s ease-out 1.9s;
 }
 .delighter.started li:nth-child(20) {
-  transition: all .7s ease-out 2.0s;
+  transition: all 0.7s ease-out 2s;
 }
 .delighter.started li:nth-child(21) {
-  transition: all .7s ease-out 2.1s;
+  transition: all 0.7s ease-out 2.1s;
 }
 .delighter.started li:nth-child(22) {
-  transition: all .7s ease-out 2.2s;
+  transition: all 0.7s ease-out 2.2s;
 }
 .delighter.started li:nth-child(23) {
-  transition: all .7s ease-out 2.3s;
+  transition: all 0.7s ease-out 2.3s;
 }
